[package]
name = "hephaestus"
version = "0.0.0"
edition = "2024"

[profile.release]
lto = "thin"
codegen-units = 1

[dependencies]

# Core
tokio = { version = "1", features = ["fs", "io-std", "io-util", "net", "rt", "signal", "sync", "macros", "test-util"] }
futures = "0.3.31"

# Util
async-trait = "0.1"
anyhow = "1"

# Configuration
config = { version = "0.15" }

# SerDe
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Web
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["timeout", "limit", "trace", "catch-panic", "normalize-path", "request-id"] }

# Metrics
prometheus = "0.14.0"
