[package]
name = "hephaestus"
version = "0.0.0"
edition = "2024"

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
# Core
tokio = { version = "1", features = ["fs", "process", "io-std", "io-util", "net", "rt", "signal", "sync", "macros", "test-util"] }
futures = "0.3.31"

# Util
async-trait = "0.1"
anyhow = "1"
num-traits = "0.2.19"

# Configuration
config = { version = "0.15", default-features = false, features = ["toml", "json"] }

# SerDe
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9.10+spec-1.1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Web
axum = { version = "0.8", default-features = false, features = ["tokio", "tracing", "http1"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["timeout", "trace", "catch-panic", "normalize-path", "request-id"] }

# Metrics
prometheus = "0.14.0"

# Docker
bollard = "*"
